plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.3'
    id 'io.spring.dependency-management' version '1.1.6'
    id "co.uzzu.dotenv.gradle" version "4.0.0"
    id "com.diffplug.spotless" version "6.25.0"
}

group = 'com.scrumflow'
version = '1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

springBoot {
    buildInfo()
}

dependencies {

    //Spring
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation' 
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'

    //Swagger
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0"

    //Map Struct / Lombok
    implementation "org.mapstruct:mapstruct:1.5.5.Final"
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //DB
    implementation 'org.flywaydb:flyway-core'
    implementation group: 'org.flywaydb', name: 'flyway-mysql', version: '10.17.2'
    runtimeOnly 'com.mysql:mysql-connector-j'
}

apply from: "spotless.gradle"

tasks.named("compileJava") {
    finalizedBy spotlessApply
}
